# IZ2

./: .gitignore  CMakeLists.txt  README.md  input.txt  main.c
.github/workflows/: ci.yml
data/: input.txt
include/dynamic/: vector.c  vector.h
include/static/: CMakeLists.txt  vector.c  vector.h
include/static/file/: file.c  file.h
include/static/histogram/: histogram.h
include/vector_dynamic/: CMakeLists.txt  vector.c  vector.h
include/vector_dynamic/file/: CMakeLists.txt  file.c  file.h
include/vector_dynamic/histogram/: CMakeLists.txt  histogram.c  histogram.h
include/vector_dynamic/shared_memory/: CMakeLists.txt  shared_memory.c  shared_memory.h
include/vector_static/: CMakeLists.txt  vector.c  vector.h
include/vector_static/file/: CMakeLists.txt  file.c  file.h
include/vector_static/histogram/: CMakeLists.txt  histogram.c  histogram.h
tests/: CMakeLists.txt  tests.cpp
tests/answers/: answer1.txt  answer2.txt  sanswer_100mb.txt  sanswer_1mb.txt
tests/dynamic/: tests.cpp
tests/input/: stest_1mb.txt  test2.txt
tests/static/: tests.cpp
